# Byter

./: .gitignore  Byter.jucer  CMakeLists.txt
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/MacOSX/Byter.xcodeproj/: project.pbxproj
Builds/MacOSX/NewProject.xcodeproj/: project.pbxproj
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
